# kurl-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yaml  test.yaml
notes/: spec.md
src/: main.rs
tests/: integration.sh
