[package]
name = "kurl-cli"
version = "0.1.0"
edition = "2021"
description = "A curl clone with detailed debugging info, written in Rust."
license = "MIT"
repository = "https://github.com/worktools/kurl-cli"

[dependencies]
argh = "0.1"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
tokio = { version = "1.47.0", features = ["full"] }

[[bin]]
name = "kurl"
path = "src/main.rs"
